[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceflow"
version = "1.0.0"
description = "Intelligent error analysis and fix generation for developers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "hallucinaut", email = "devops@example.com"}
]
keywords = ["debugging", "errors", "analysis", "developer-tools", "troubleshooting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "regex>=2023.0.0",
    "rich>=13.0.0",
    "anyio>=4.0.0",
]

[project.scripts]
traceflow = "traceflow.daemon:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["traceflow"]
